      retry on SMTP error.
  * mgo/client.go:
    - Simplify ensuring indexes. Added keys.mtime.
  * cmd/hockeypuck-mgo/main.go, debian/postinst, version.go:
    - Add -version flag, setting version file from changelog in package postinst.
  * hkp_types.go, mgo/client.go, mgo/pks.go, mgo/worker.go,
    responses.go, server.go, templates.go, worker.go,
    www/templates/layout.tmpl, www/templates/pks/index.tmpl:
    - Add op=status page. LP: #1075391
    - Cache last PKS sync status for op=status response.
    - Expose Hostname:Port in Lookup for op=status.
    - MongoDB: Ensure unique index on pksStat.addr.
    - Fixed template context passthru issues.

 -- Casey Marshall <casey.marshall@gazzang.com>  Wed, 28 Nov 2012 23:39:06 -0600

hockeypuck (0.6) precise; urgency=low

  [ Casey Marshall ]
  * Opening 0.6 milestone.
  * mgo/worker.go:
    - Fix keyword query iteration. Need to keep allocating new PubKeys,
      was overwriting the same one in the iter loop.
      LP: #1073786
  * cmd/hockeypuck-load/main.go, pgp_types.go, responses.go,
    www/templates/pks/index.tmpl:
    - Display user attribute image subpacket in index templates. LP: #1044773
  * responses.go, www/templates/pks/index.tmpl:
    - Display QR code of public key fingerprint. LP: #1074552
  * www/css/hkp.css, www/templates/header.tmpl:
    - Make logo heading a link.
  * debian/mkdists, debian/rules, Makefile:
    - Remove hockeypuck-pq from binary packages, its not ready for that.
    - Add helper script for slinging multi-distro source packages.
  * cmd/hockeypuck-load/main.go:
    - Add hockeypuck -mail-add option for receiving PKS inbound keys.
      LP: #1075379
  * debian/rules, Makefile:
    - Use the binary targets to get dependencies, use go install
      to build them into local gopath/bin. Simplifies Makefile.
  * mgo/worker.go, pq/worker.go, responses.go, server.go, templates.go,
    worker.go, www/templates/header.tmpl:
    - Create form to add pasted key armor. LP: #1076841